kubernetes/keycloak/overlays/infra/patch-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "infra-kc"
spec:
  ingressClassName: "nginx"
  rules:
    - host: "keycloak.infra.sovereignit.cloud"
      http:
        paths:
          - backend:
              service:
                name: "keycloak"
                port:
                  name: "https"
            path: "/"
            pathType: "Prefix"
  tls:
    - hosts:
        - "keycloak.infra.sovereignit.cloud"
      secretName: "keycloak-cert-prod"
